# personal-expense-tracker

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .mcp.json  .opentofu-version  .pre-commit-config.yaml  CLAUDE.md  Makefile  OPTIMIZATION_AUDIT.md  README.md  architecture.drawio  example.tfvars  infracost-usage.yml  main.tf  outputs.tf  provider.tf  variables.tf
.claude/: settings.json
.github/workflows/: ci.yml
cloud-function/: README.md
cloud-function/data-sample/: notion.json
cloud-function/secret-sample/: sa-key.json
cloud-function/source/: .gcloudignore  main.py  notion.py  requirements.local.txt  requirements.txt
cloud-functions/notion-to-bigquery/: .gcloudignore  gcloud.py  main.py  notion.py  requirements.txt
docs/: README.md  database_schema.csv
docs/dev_data/: expenses.csv  monthly_category_amounts.csv  rate.csv
mcp-servers/pipeline-runner/: README.md  pyproject.toml  runner.py
notion_pipeline/: README.md  pyproject.toml
opentofu/: main.tf  outputs.tf  provider.tf  variables.tf
opentofu/modules/base_pipeline/: README.md  main.tf  outputs.tf  variables.tf
opentofu/modules/bigquery_external_tables/: README.md  main.tf  outputs.tf  variables.tf
opentofu/modules/data_explorer/: README.md  main.tf  outputs.tf  variables.tf
opentofu/modules/data_explorer/src/: Dockerfile  app.py  auth.py  config.yaml  database.py  docker-compose.yml  duckdb_init.sql  expense_analysis.py  pyproject.toml  query_editor.py
opentofu/modules/data_explorer/src/reports/: expense_analysis.py  expense_tracker.py  query_editor.py
opentofu/modules/google_sheets_pipeline/: README.md  main.tf  outputs.tf  run_local.sh  variables.tf
opentofu/modules/google_sheets_pipeline/src/: google_sheets_pipeline.py  main.py  requirements.txt
opentofu/modules/google_sheets_pipeline/src/.dlt/: .sources  config.toml
opentofu/modules/google_sheets_pipeline/src/google_sheets/: __init__.py
opentofu/modules/gsheets_pipeline/: README.md  main.tf  outputs.tf  variables.tf
opentofu/modules/gsheets_pipeline/src/: main.py  pyproject.toml  requirements.txt
opentofu/modules/gsheets_pipeline/src/google_sheets/: README.md  __init__.py  setup_script_gcp_oauth.py
opentofu/modules/gsheets_pipeline/src/google_sheets/helpers/: api_calls.py  data_processing.py
opentofu/modules/notion_pipeline/: README.md  main.tf  outputs.tf  run_local.sh  variables.tf
opentofu/modules/notion_pipeline/src/: main.py  notion_pipeline.py  pyproject.toml  requirements.txt
opentofu/modules/notion_pipeline/src/notion/: README.md
opentofu/modules/streamlit/: README.md  main.tf  variables.tf
opentofu/modules/streamlit/src/: .dockerignore  app.py
opentofu/scripts/: run_local.sh
secrets-sample/: notion-integration.txt  sa-private-key.json
streamlit/: README.md  app.py  docker-compose.yml  pyproject.toml
terragrunt/: common_vars.yaml  root.hcl  terragrunt.hcl
terragrunt/dev/: env_vars.example.yaml  terragrunt.hcl
terragrunt/example/: env_vars.yaml  terragrunt.hcl
terragrunt/prod/: env_vars.example.yaml
