[project]
name = "pipeline-runner-mcp"
version = "0.1.0"
description = "MCP server for running expense tracker pipelines during development"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "ty>=0.0.1a17",
]
