[project]
name = "data-explorer-app"
version = "1.0.0"
description = "Hello world app"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "duckdb>=1.3.2",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
    "streamlit-authenticator>=0.4.2",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=6.0.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
]
