[project]
name = "google-sheets-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "dlt[filesystem,gcs,pyiceberg]>=1.5.0",
    "sqlalchemy>=2.0.18",
    "functions-framework",
    "google-api-python-client>=2.166.0",
]

[dependency-groups]
dev = [
    "functions-framework>=3.8.2",
    "mypy>=1.14.1",
    "ruff>=0.8.6",
]
