[project]
name = "google-sheets-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "dlt[parquet]>=1.5.0",
    "dlt[gs]>=1.5.0",
    "dlt[filesystem]>=0.3.5",
    "google-api-python-client>=2.166.0",
]

[dependency-groups]
dev = [
    "functions-framework>=3.8.2",
    "google-api-python-client-stubs>=1.30.0",
    "mypy>=1.14.1",
    "ruff>=0.8.6",
]
